--- a/projeto_site/login.html
+++ b/projeto_site/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>JobTeens - Login</title>
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="style.css">
     <!-- Bootstrap -->
@@ -17,10 +17,10 @@
 <body>
     <!-- Barra de navagação [Início] -->
     <header>
-        <nav class="navbar navbar-expand-md bg-menu">
+        <nav class="navbar navbar-expand-md bg-menu fixed-top shadow">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="/imagens/logo5.png" alt="Logo" width="44" height="44" class="d-inline-block ">
+                <a class="navbar-brand color-text" href="index.html">
+                    <img src="/imagens/logo2.png" alt="logo" width="50" height="45" class="d-inline-block">
                     JobTeens
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -31,13 +31,13 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                     <div class="navbar-nav ps-1 px-3">
                         <a class="nav-link" href="index.html">Home</a>
-                        <a class="nav-link" href="vagas.html">vagas</a>
+                        <a class="nav-link" href="vagas.html">Vagas</a>
                         <a class="nav-link" href="projetos_cursos.html">Projetos&Cursos</a>
                         <a class="nav-link" href="sobre.html">Sobre nós</a>
                     </div>
                     <form class="d-flex flex-column flex-md-row gap-2" role="search">
-                        <a href="login.html" class="btn btn-sm btn-outline-success flex-fill">Login</a>
-                        <a href="cadastro.html" class="btn btn-sm btn-success">Cadastro</a>
+                        <a href="login.html" class="btn btn-sm flex-fill custom-btn">Login</a>
+                        <a href="cadastro.html" class="btn btn-sm custom-btn2">Cadastro</a>
                     </form>
                 </div>
             </div>
@@ -48,15 +48,15 @@
     <main>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-12 bg-login">
-                    <div class="container costum-margem">
+                <div class="col-md-6 bg-login">
+                    <div class="container costum-margem-h1">
                         <h1>Bem vindo(a)</h1>
                         <p>Acesse e mantenha-se atualizado sobre as oportunidades para encontrar o seu primeiro emprego!</p>
                     </div>
                 </div>
-                <div class="col-md-5 py-5 mx-auto">
+                <div class="col-md-6 py-5">
                     <div class="pb-3 text-center">
-                        <img src="/imagens/logo6.png" alt="logo" class="custom-logo">
+                        <img src="/imagens/logo2.png" alt="logo" class="logo">
                         <h3>JobTeens</h3>
                         <br>
                         <h5>Acesse sua conta</h5>
@@ -77,7 +77,7 @@
                             </div>
                         </div>
                         <div class="pt-5 pb-4 d-grid">
-                            <button type="button" class="btn btn-success">Entrar</button>
+                            <button type="button" class="btn btn-login">Entrar</button>
                         </div>
                     </form>
                 </div>
@@ -119,7 +119,7 @@
                     <form class="d-flex flex-column flex-sm-row gap-2">
                         <input class="form-control form-control-sm" type="email" placeholder="Endereço de email"
                             aria-label="email">
-                        <button class="btn btn-sm btn-primary" type="submit">Se inscreva</button>
+                        <button class="btn btn-sm btn-footer" type="submit">Se inscreva</button>
                     </form>
                 </div>
             </div>
