--- a/projeto_site/projetos_cursos.html
+++ b/projeto_site/projetos_cursos.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projetos&Cursos</title>
+    <title>JobTeens - Projetos&Cursos</title>
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="style.css">
     <!-- Bootstrap -->
@@ -17,10 +17,10 @@
 <body>
     <!-- Barra de navagação [Início] -->
     <header>
-        <nav class="navbar navbar-expand-md bg-menu">
+        <nav class="navbar navbar-expand-md bg-menu fixed-top shadow">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                <a class="navbar-brand color-text" href="index.html">
+                    <img src="/imagens/logo2.png" alt="logo" width="50" height="45" class="d-inline-block">
                     JobTeens
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -36,8 +36,8 @@
                         <a class="nav-link" href="sobre.html">Sobre nós</a>
                     </div>
                     <form class="d-flex flex-column flex-md-row gap-2" role="search">
-                       <a href="login.html" class="btn btn-sm btn-outline-primary flex-fill">Login</a> 
-                       <a href="cadastro.html" class="btn btn-sm btn-primary">Cadastro</a>
+                        <a href="login.html" class="btn btn-sm flex-fill custom-btn">Login</a>
+                        <a href="cadastro.html" class="btn btn-sm custom-btn2">Cadastro</a>
                     </form>
                 </div>
             </div>
@@ -84,7 +84,7 @@
                     <p>Resumo mensal do que há de novo e emocionante de nós.</p>
                     <form class="d-flex flex-column flex-sm-row gap-2">
                         <input class="form-control form-control-sm" type="email" placeholder="Endereço de email" aria-label="email">
-                        <button class="btn btn-sm btn-primary" type="submit">Se inscreva</button>
+                        <button class="btn btn-sm btn-footer" type="submit">Se inscreva</button>
                     </form>
                 </div>
             </div>
