Edição - (Home, Projetos&Cursos)

--- a/projeto_site/login.html
+++ b/projeto_site/login.html
@@ -17,7 +17,7 @@
 <body>
     <!-- Barra de navagação [Início] -->
     <header>
-        <nav class="navbar navbar-expand-md bg-menu fixed-top shadow">
+        <nav class="navbar navbar-expand-md bg-menu shadow">
             <div class="container-fluid">
                 <a class="navbar-brand color-text" href="index.html">
                     <img src="/imagens/logo2.png" alt="logo" width="50" height="45" class="d-inline-block">
@@ -46,43 +46,47 @@
     <!-- Barra de navegação [Fim] -->
     <!-- Corpo da página [Início] -->
     <main>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-6 bg-login">
-                    <div class="container costum-margem-h1">
-                        <h1>Bem vindo(a)</h1>
-                        <p>Acesse e mantenha-se atualizado sobre as oportunidades para encontrar o seu primeiro emprego!</p>
-                    </div>
-                </div>
-                <div class="col-md-6 py-5">
-                    <div class="pb-3 text-center">
-                        <img src="/imagens/logo2.png" alt="logo" class="logo">
-                        <h3>JobTeens</h3>
-                        <br>
-                        <h5>Acesse sua conta</h5>
-                    </div>
-                    <form class="text-start">
-                        <div>
-                            <input type="email" class="form-control mb-3" id="Email4" placeholder="Login">
-                            <input type="password" class="form-control mb-3" id="Password4" placeholder="Senha">
+        <section>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-6 bg-login">
+                        <div class="container costum-margem-h1">
+                            <h1>Bem vindo(a)</h1>
+                            <p>Acesse e mantenha-se atualizado sobre as oportunidades para encontrar o seu primeiro
+                                emprego!</p>
                         </div>
-                        <div class="d-flex justify-content-between">
-                            <div class="form-check form-switch">
-                                <input class="form-check-input" type="checkbox" role="switch"
-                                    id="flexSwitchCheckDefault">
-                                <label class="form-check-label" for="flexSwitchCheckDefault">Mantenha-me logado</label>
-                            </div>
+                    </div>
+                    <div class="col-md-6 py-5">
+                        <div class="pb-3 text-center">
+                            <img src="/imagens/logo2.png" alt="logo" class="logo">
+                            <h3>JobTeens</h3>
+                            <br>
+                            <h5>Acesse sua conta</h5>
+                        </div>
+                        <form class="text-start">
                             <div>
-                                <a href="#" class="cor-link">Esqueceu a senha?</a>
+                                <input type="email" class="form-control mb-3" id="Email4" placeholder="Login">
+                                <input type="password" class="form-control mb-3" id="Password4" placeholder="Senha">
                             </div>
-                        </div>
-                        <div class="pt-5 pb-4 d-grid">
-                            <button type="button" class="btn btn-login">Entrar</button>
-                        </div>
-                    </form>
+                            <div class="d-flex justify-content-between">
+                                <div class="form-check form-switch">
+                                    <input class="form-check-input" type="checkbox" role="switch"
+                                        id="flexSwitchCheckDefault">
+                                    <label class="form-check-label" for="flexSwitchCheckDefault">Mantenha-me
+                                        logado</label>
+                                </div>
+                                <div>
+                                    <a href="#" class="cor-link">Esqueceu a senha?</a>
+                                </div>
+                            </div>
+                            <div class="pt-5 pb-4 d-grid">
+                                <button type="button" class="btn btn-login">Entrar</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
-        </div>
+        </section>
     </main>
     <!-- Corpo da página [Fim] -->
     <!-- Rodapé [Início] -->
