--- a/projeto_site/vagas.html
+++ b/projeto_site/vagas.html
@@ -17,7 +17,7 @@
 <body>
     <!-- Barra de navagação [Início] -->
     <header>
-        <nav class="navbar navbar-expand-md bg-menu fixed-top shadow">
+        <nav class="navbar navbar-expand-md bg-menu shadow">
             <div class="container-fluid">
                 <a class="navbar-brand color-text" href="index.html">
                     <img src="/imagens/logo2.png" alt="logo" width="50" height="45" class="d-inline-block">
@@ -46,121 +46,123 @@
     <!-- Barra de navegação [Fim] -->
     <!-- Corpo da página [Início] -->
     <main>
-        <div class="container-fluid bg-vagas">
-            <div class="container">
-                <h1>Descubra sua próxima grande oportunidade!</h1>
-            </div>
-        </div>
-        <div class="container-fluid bg-color-form">
-            <div class="row">
-                <div class="col-md-8 py-4 mx-auto">
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Pesquisar" aria-label="Search">
-                        <button class="btn btn-vagas" type="submit">Pesquisar</button>
-                    </form>
+        <section>
+            <div class="container-fluid bg-vagas">
+                <div class="container">
+                    <h1>Descubra sua próxima grande oportunidade!</h1>
                 </div>
             </div>
-        </div>
-        <div class="container py-4">
-            <h1>Vagas</h1>
-            <h5>Oportunidades Disponíveis</h5>
-            <div class="row">
-                <div class="col-md-12 pt-4">
-                    <ul class="list-group">
-                        <li class="list-group-item d-flex flex-column flex-sm-row gap-2">
-                            <div class="ms-2 me-auto">
-                                <div class="fw-bold">Desenvolvedor Web</div>
-                                Empresa A
-                            </div>
-                            <div class="col-md-4 d-flex flex-column">
-                                <button class="btn btn-sm btn-list-vagas ms-2 my-auto">Cadastre-se</button>
-                            </div>
-                        </li>
-                        <li class="list-group-item d-flex flex-column flex-sm-row gap-2">
-                            <div class="ms-2 me-auto">
-                                <div class="fw-bold">Analista de Marketing</div>
-                                Empresa B
-                            </div>
-                            <div class="col-md-4 d-flex flex-column">
-                                <button class="btn btn-sm btn-list-vagas ms-2 my-auto">Cadastre-se</button>
-                            </div>
-                        </li>
-                        <li class="list-group-item list-group-item d-flex flex-column flex-sm-row gap-2">
-                            <div class="ms-2 me-auto">
-                                <div class="fw-bold">Designer Gráfico</div>
-                                Empresa C
-                            </div>
-                            <div class="col-md-4 d-flex flex-column">
-                                <button class="btn btn-sm btn-list-vagas ms-2 my-auto">Cadastre-se</button>
-                            </div>
-                        </li>
-                        <li class="list-group-item d-flex flex-column flex-sm-row gap-2">
-                            <div class="ms-2 me-auto">
-                                <div class="fw-bold">Gerente de Projetos</div>
-                                Empresa D
-                            </div>
-                            <div class="col-md-4 d-flex flex-column">
-                                <button class="btn btn-sm btn-list-vagas ms-2 my-auto">Cadastre-se</button>
-                            </div>
-                        </li>
-                        <li class="list-group-item d-flex flex-column flex-sm-row gap-2">
-                            <div class="ms-2 me-auto">
-                                <div class="fw-bold">Assistente Administrativo</div>
-                                Empresa E
-                            </div>
-                            <div class="col-md-4 d-flex flex-column">
-                                <button class="btn btn-sm btn-list-vagas ms-2 my-auto">Cadastre-se</button>
-                            </div>
-                        </li>
-                        <li class="list-group-item d-flex flex-column flex-sm-row gap-2">
-                            <div class="ms-2 me-auto">
-                                <div class="fw-bold">Engenheiro de Software</div>
-                                Empresa F
-                            </div>
-                            <div class="col-md-4 d-flex flex-column">
-                                <button class="btn btn-sm btn-list-vagas ms-2 my-auto">Cadastre-se</button>
-                            </div>
-                        </li>
-                        <li class="list-group-item d-flex flex-column flex-sm-row gap-2">
-                            <div class="ms-2 me-auto">
-                                <div class="fw-bold">Analista de Recursos Humanos</div>
-                                Empresa G
-                            </div>
-                            <div class="col-md-4 d-flex flex-column">
-                                <button class="btn btn-sm btn-list-vagas ms-2 my-auto">Cadastre-se</button>
-                            </div>
-                        </li>
-                        <li class="list-group-item d-flex flex-column flex-sm-row gap-2">
-                            <div class="ms-2 me-auto">
-                                <div class="fw-bold">Consultor de Vendas </div>
-                                Empresa H
-                            </div>
-                            <div class="col-md-4 d-flex flex-column">
-                                <button class="btn btn-sm btn-list-vagas ms-2 my-auto">Cadastre-se</button>
-                            </div>
-                        </li>
-                        <li class="list-group-item d-flex flex-column flex-sm-row gap-2">
-                            <div class="ms-2 me-auto">
-                                <div class="fw-bold">Analista Financeiro</div>
-                                Empresa I
-                            </div>
-                            <div class="col-md-4 d-flex flex-column">
-                                <button class="btn btn-sm btn-list-vagas ms-2 my-auto">Cadastre-se</button>
-                            </div>
-                        </li>
-                        <li class="list-group-item d-flex flex-column flex-sm-row gap-2">
-                            <div class="ms-2 me-auto">
-                                <div class="fw-bold">Suporte Técnico</div>
-                                Empresa J
-                            </div>
-                            <div class="col-md-4 d-flex flex-column">
-                                <button class="btn btn-sm btn-list-vagas ms-2 my-auto">Cadastre-se</button>
-                            </div>
-                        </li>
-                    </ul>
+            <div class="container-fluid bg-color-form">
+                <div class="row">
+                    <div class="col-md-8 py-4 mx-auto">
+                        <form class="d-flex" role="search">
+                            <input class="form-control me-2" type="search" placeholder="Pesquisar" aria-label="Search">
+                            <button class="btn btn-vagas" type="submit">Pesquisar</button>
+                        </form>
+                    </div>
                 </div>
             </div>
-        </div>
+            <div class="container py-4">
+                <h1>Vagas</h1>
+                <h5>Oportunidades Disponíveis</h5>
+                <div class="row">
+                    <div class="col-md-12 pt-4">
+                        <ul class="list-group">
+                            <li class="list-group-item d-flex flex-column flex-sm-row gap-2">
+                                <div class="ms-2 me-auto">
+                                    <div class="fw-bold">Desenvolvedor Web</div>
+                                    Empresa A
+                                </div>
+                                <div class="col-md-4 d-flex flex-column">
+                                    <button class="btn btn-sm btn-list-vagas ms-2 my-auto">Cadastre-se</button>
+                                </div>
+                            </li>
+                            <li class="list-group-item d-flex flex-column flex-sm-row gap-2">
+                                <div class="ms-2 me-auto">
+                                    <div class="fw-bold">Analista de Marketing</div>
+                                    Empresa B
+                                </div>
+                                <div class="col-md-4 d-flex flex-column">
+                                    <button class="btn btn-sm btn-list-vagas ms-2 my-auto">Cadastre-se</button>
+                                </div>
+                            </li>
+                            <li class="list-group-item list-group-item d-flex flex-column flex-sm-row gap-2">
+                                <div class="ms-2 me-auto">
+                                    <div class="fw-bold">Designer Gráfico</div>
+                                    Empresa C
+                                </div>
+                                <div class="col-md-4 d-flex flex-column">
+                                    <button class="btn btn-sm btn-list-vagas ms-2 my-auto">Cadastre-se</button>
+                                </div>
+                            </li>
+                            <li class="list-group-item d-flex flex-column flex-sm-row gap-2">
+                                <div class="ms-2 me-auto">
+                                    <div class="fw-bold">Gerente de Projetos</div>
+                                    Empresa D
+                                </div>
+                                <div class="col-md-4 d-flex flex-column">
+                                    <button class="btn btn-sm btn-list-vagas ms-2 my-auto">Cadastre-se</button>
+                                </div>
+                            </li>
+                            <li class="list-group-item d-flex flex-column flex-sm-row gap-2">
+                                <div class="ms-2 me-auto">
+                                    <div class="fw-bold">Assistente Administrativo</div>
+                                    Empresa E
+                                </div>
+                                <div class="col-md-4 d-flex flex-column">
+                                    <button class="btn btn-sm btn-list-vagas ms-2 my-auto">Cadastre-se</button>
+                                </div>
+                            </li>
+                            <li class="list-group-item d-flex flex-column flex-sm-row gap-2">
+                                <div class="ms-2 me-auto">
+                                    <div class="fw-bold">Engenheiro de Software</div>
+                                    Empresa F
+                                </div>
+                                <div class="col-md-4 d-flex flex-column">
+                                    <button class="btn btn-sm btn-list-vagas ms-2 my-auto">Cadastre-se</button>
+                                </div>
+                            </li>
+                            <li class="list-group-item d-flex flex-column flex-sm-row gap-2">
+                                <div class="ms-2 me-auto">
+                                    <div class="fw-bold">Analista de Recursos Humanos</div>
+                                    Empresa G
+                                </div>
+                                <div class="col-md-4 d-flex flex-column">
+                                    <button class="btn btn-sm btn-list-vagas ms-2 my-auto">Cadastre-se</button>
+                                </div>
+                            </li>
+                            <li class="list-group-item d-flex flex-column flex-sm-row gap-2">
+                                <div class="ms-2 me-auto">
+                                    <div class="fw-bold">Consultor de Vendas </div>
+                                    Empresa H
+                                </div>
+                                <div class="col-md-4 d-flex flex-column">
+                                    <button class="btn btn-sm btn-list-vagas ms-2 my-auto">Cadastre-se</button>
+                                </div>
+                            </li>
+                            <li class="list-group-item d-flex flex-column flex-sm-row gap-2">
+                                <div class="ms-2 me-auto">
+                                    <div class="fw-bold">Analista Financeiro</div>
+                                    Empresa I
+                                </div>
+                                <div class="col-md-4 d-flex flex-column">
+                                    <button class="btn btn-sm btn-list-vagas ms-2 my-auto">Cadastre-se</button>
+                                </div>
+                            </li>
+                            <li class="list-group-item d-flex flex-column flex-sm-row gap-2">
+                                <div class="ms-2 me-auto">
+                                    <div class="fw-bold">Suporte Técnico</div>
+                                    Empresa J
+                                </div>
+                                <div class="col-md-4 d-flex flex-column">
+                                    <button class="btn btn-sm btn-list-vagas ms-2 my-auto">Cadastre-se</button>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- Corpo da página [Fim] -->
     <!-- Rodapé [Início] -->
