--- a/projeto_site/index.html
+++ b/projeto_site/index.html
@@ -17,7 +17,7 @@
 <body>
     <!-- Barra de navagação [Início] -->
     <header>
-        <nav class="navbar navbar-expand-md bg-menu fixed-top shadow">
+        <nav class="navbar navbar-expand-md bg-menu shadow">
             <div class="container-fluid">
                 <a class="navbar-brand color-text" href="index.html">
                     <img src="/imagens/logo2.png" alt="logo" width="50" height="45" class="d-inline-block">
@@ -46,9 +46,209 @@
     <!-- Barra de navegação [Fim] -->
     <!-- Corpo da página [Início] -->
     <main>
-        <div class="container-fluid costum-margin">
-        
-        </div>    
+        <section>
+            <div class="container-fluid bg-home d-flex align-items-end">
+                <div class="container-fluid px-0">
+                    <div class="row">
+                        <div class="col-md-6 custom-bordar ps-3 py-3">
+                            <h2>Bem vindo(a) à <strong class="color-h1">JobTeens</strong></h2>
+                            <h6>Inicie sua jornada profissional conosco!</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container-fluid bg-home-color py-3 px-3">
+                <div class="container">
+                    <div class="row text-center">
+                        <div class="col-md-3">
+                            <i class="bi bi-people-fill fs-1"></i>
+                            <h5>Vagas Exclusivas para Jovens</h5>
+                            <p class="font-paragraf">Oportunidades feitas sob medida para jovens em buscam de inserção
+                                no mercado de trabalho.</p>
+                        </div>
+                        <div class="col-md-3">
+                            <i class="bi bi-check-circle-fill fs-1"></i>
+                            <h5>Candidatura Simplificado</h5>
+                            <p class="font-paragraf">Processo de candidatura fácil e intuitivo, tornando mais simples a
+                                sua busca por emprego.</p>
+                        </div>
+                        <div class="col-md-3">
+                            <i class="bi bi-building-fill-check fs-1"></i>
+                            <h5>Acesso a Empresas Promissoras</h5>
+                            <p class="font-paragraf">Oferecemos a oportunidade de trabalhar com as melhores
+                                organizações.
+                            </p>
+                        </div>
+                        <div class="col-md-3">
+                            <i class="bi bi-chat-square-dots-fill fs-1"></i>
+                            <h5>Feedback e Acompanhamento</h5>
+                            <p class="font-paragraf">Acompanhe o progresso das suas candidaturas e mantenha-se
+                                informado.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Cards -->
+            <div class="container py-5">
+                <div class="row">
+                    <!-- Card 1 -->
+                    <div class="col-md-8">
+                        <h2>Oportunidades para você</h2>
+                        <div class="card mt-4 my-3 shadow">
+                            <div class="card-body">
+                                <h5 class="card-title">Analista de Sistemas</h5>
+                                <p class="card-text">Os analistas de sistemas estudam os diversos sistemas existentes
+                                    entre hardwares, softwares e o usuário final.</p>
+                                <a href="vagas.html" class="btn btn-home">Conferir</a>
+                            </div>
+                        </div>
+                        <div class="card my-3 shadow">
+                            <div class="card-body">
+                                <h5 class="card-title">Engenheiro de Software</h5>
+                                <p class="card-text">O engenheiro de software é o profissional que desenvolve programas,
+                                    firmware, aplicativos, scripts e sistemas afins.</p>
+                                <a href="vagas.html" class="btn btn-home">Conferir</a>
+                            </div>
+                        </div>
+                        <div class="card my-3 shadow">
+                            <div class="card-body">
+                                <h5 class="card-title">Engenheiro Civil</h5>
+                                <p class="card-text">Engenharia Civil é o responsável por todo processo construtivo da
+                                    obra, sendo assim irá atuar com projeção e construção.</p>
+                                <a href="vagas.html" class="btn btn-home">Conferir</a>
+                            </div>
+                        </div>
+                        <!-- Card 2 -->
+                        <div class="my-5">
+                            <h2>Áreas profissionais populares</h2>
+                            <div class="card mt-4 my-3 shadow">
+                                <div class="row g-0">
+                                    <div class="col-md-4">
+                                        <img src="/imagens/img_card_home_TI.jpg" class="card-img" alt="TI">
+                                    </div>
+                                    <div class="col-md-8">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Tecnologia da Informação</h5>
+                                            <p class="card-text pt-3">Lorem ipsum dolor sit amet consectetur adipisicing
+                                                elit. Mollitia fugit nulla, pariatur repellendus eaque, aliquam repellat
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card my-3 shadow">
+                                <div class="row g-0">
+                                    <div class="col-md-4">
+                                        <img src="/imagens/img_card_home_adm.jpg" class="card-img" alt="administração">
+                                    </div>
+                                    <div class="col-md-8">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Administração</h5>
+                                            <p class="card-text pt-3">Lorem ipsum dolor sit amet consectetur adipisicing
+                                                elit. Mollitia fugit nulla, pariatur repellendus eaque, aliquam repellat
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card my-3 shadow">
+                                <div class="row g-0">
+                                    <div class="col-md-4">
+                                        <img src="/imagens/img_card_home_comercio.jpg" class="card-img"
+                                            alt="comércio-vendas">
+                                    </div>
+                                    <div class="col-md-8">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Vendas e Comércio</h5>
+                                            <p class="card-text pt-3">Lorem ipsum dolor sit amet consectetur adipisicing
+                                                elit. Mollitia fugit nulla, pariatur repellendus eaque, aliquam repellat
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Acordeão -->
+                    <aside class="col-md-4">
+                        <h3>Trilha do sucesso</h3>
+                        <h6>Tudo para alavancar sua carreira</h6>
+                        <div class="accordion shadow rounded-bottom" id="accordionPanelsStayOpenExample">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
+                                        aria-controls="panelsStayOpen-collapseOne">
+                                        <strong>Recode</strong>
+                                    </button>
+                                </h2>
+                                <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
+                                    aria-labelledby="panelsStayOpen-headingOne">
+                                    <div class="accordion-body">
+                                        Organização de impacto social que promove a capacitação tecnológica de
+                                        comunidades de baixa renda para o exercício da cidadania.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+                                        aria-controls="panelsStayOpen-collapseTwo">
+                                        <strong>EducarMais</strong>
+                                    </button>
+                                </h2>
+                                <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
+                                    aria-labelledby="panelsStayOpen-headingTwo">
+                                    <div class="accordion-body">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem nesciunt
+                                        consectetur iure soluta vitae facilis maxime mollitia culpa alias possimus
+                                        facere omnis, repudiandae dolores perspiciatis sint officia commodi ad minima.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
+                                        aria-controls="panelsStayOpen-collapseThree">
+                                        <strong>ProgramaAvançar</strong>
+                                    </button>
+                                </h2>
+                                <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
+                                    aria-labelledby="panelsStayOpen-headingThree">
+                                    <div class="accordion-body">
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt asperiores
+                                        soluta, sunt et nisi esse totam. Accusamus reprehenderit, a dolor officia nam
+                                        soluta aliquid laborum eligendi quo quos praesentium cumque.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="panelsStayOpen-headingFor">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#panelsStayOpen-collapseFor" aria-expanded="false"
+                                        aria-controls="panelsStayOpen-collapseFor">
+                                        <strong>Veja mais</strong>
+                                    </button>
+                                </h2>
+                                <div id="panelsStayOpen-collapseFor" class="accordion-collapse collapse"
+                                    aria-labelledby="panelsStayOpen-headingFor">
+                                    <div class="list-group custom-list rounded-bottom">
+                                        <a href="#" class="list-group-item list-group-item-action">A second link
+                                            item</a>
+                                        <a href="#" class="list-group-item list-group-item-action">A third link item</a>
+                                        <a href="#" class="list-group-item list-group-item-action">A fourth link
+                                            item</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </aside>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- Corpo da página [Fim] -->
     <!-- Rodapé [Início] -->
